APPS-9847 z-index bug fix

--- a/src/assets/styles/components/interaction-areas.scss
+++ b/src/assets/styles/components/interaction-areas.scss
@@ -20,9 +20,10 @@ $video-player-interaction-area-marker-default-color : #FF620C;
     opacity: 0;
     transform: translate(-50%, -50%);
     transition: opacity 0.5s;
+    z-index: 1;
 
     &:hover {
-      z-index: 1;
+      opacity: 1;
     }
 
     .go-back-button,
