--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -221,7 +221,7 @@ $icon-font-path: '../fonts' !default;
   }
 
   .vjs-control-bar {
-    z-index: 1;
+    z-index: 2;
 
     .vjs-volume-panel {
       margin-right: 1em;
